Concluido o projeto foi criado a interação do botão de exclusão e atualização dos totais

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
           <header>
             <p>
               Minhas solicitações <i>&bullet;</i>
-              <span>0 despesas</span>
+              <span>0 despesa</span>
             </p>
             <h2><small>R$</small>0,00</h2>
           </header>
 
           <ul>
-          <!--Exemplo da estrutura HTML de um item de dispesa.
+          <!--Exemplo da estrutura HTML de um item de dispesa. 
             <li class="expense">
               <img src="./img/food.svg" alt="Ícone de tipo da despesa" />
 
